--- a/publications.html
+++ b/publications.html
@@ -393,6 +393,7 @@ div.tocify {
 <div id="section" class="section level1">
 <h1>2019</h1>
 <ul>
+<li><p>Théo Michelot, Pierre Gloaguen, Paul G. Blackwell and Marie-Pierre Étienne. The Langevin diffusion as a continuous-time model of animal movement and habitat selection to appear in <em>Methods in Ecology and Evolution</em>. <a href="https://arxiv.org/abs/1810.10213">arXiV</a></p></li>
 <li><p>Rocio Joo, Matthew E. Boone, Thomas A. Clay, Samantha C. Patrick, Susana Clusella-Trullas, Mathieu BasilleME Boone, TA Clay, SC Patrick, S Clusella-Trullas, M Basille. Navigating through the R packages for movement<a href="https://arxiv.org/pdf/1901.05935.pdf">arXiv preprint arXiv:1901.05935</a></p></li>
 <li><p>Rémi Patin, Marie-Pierre Étienne, Émilie Lebarbier, Simon Chamaillé-Jammes,Simon Benhamou. Identifying stationary phases in multivariate time-series for highlighting behavioural modes and home range settlements. <a href="https://www.biorxiv.org/content/10.1101/444794v1">bioRXiv</a></p></li>
 <li><p><img src="img/R.jpeg" hspace = "3"  alt="R" width="30px" align="left"> </img> Théo Michelot, Marie-Pierre Étienne, Pierre Gloaguen. <a href="https://marieetienne.github.io/Rhabit">Rhabit: Estimating ressource selection function from movement data</a></p></li>
