--- a/news.html
+++ b/news.html
@@ -320,7 +320,7 @@ $(document).ready(function () {
 
 
 <p><img src="img/logo_m2g_rvb_300dpi.png" hspace = "30"  alt="mpe" width="200px" align="right"> </img></p>
-<p><strong>Save the date !</strong> The next edition of the Moving2Gather workshop will take place in Agrocampus Ouest in Rennes, March 23rd 25th. There will be a nice follow up as the GdR Ecostat meeting will take place at the same venue on March 26th , 27th.</p>
+<p><strong>Save the date !</strong> The next edition of the Moving2Gather workshop will take place in Agrocampus Ouest in Rennes, March 11th 13th. There will be a nice follow up as the GdR Ecostat meeting will take place at the same venue on March 9th , 10th.</p>
 
 
 
